syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message BoundsMessage {
    int32 firstValue = 1;
    int32 lastValue = 2;
}

message NumberMessage {
   int32 value = 1;
}

service RemoteNumberGenerator {
    rpc getSeries(BoundsMessage) returns (stream NumberMessage);
}
